// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. single inline element 1`] = `
<div>
  <div>
    Lindsay McIntosh, Scottish Political Editor
  </div>
</div>
`;

exports[`2. with the author in the begining 1`] = `
<div>
  <a
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>
  <div>
    , Environment Editor
  </div>
</div>
`;

exports[`3. with the author at the end 1`] = `
<div>
  <div>
    RBS Six Nations, 
  </div>
  <a
    href="/profile/mike-atherton"
    role="link"
  >
    Mike Atherton
  </a>
</div>
`;

exports[`4. with multiple authors separated by a pipe 1`] = `
<div>
  <a
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>
  <div>
     | 
  </div>
  <a
    href="/profile/mike-atherton"
    role="link"
  >
    Mike Atherton
  </a>
  <div>
     | 
  </div>
  <a
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`5. with multiple authors separated by text with commas 1`] = `
<div>
  <a
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>
  <div>
    , 
  </div>
  <a
    href="/profile/mike-atherton"
    role="link"
  >
    Mike Atherton
  </a>
  <div>
    , 
  </div>
  <a
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`6. with multiple authors separated by spaces 1`] = `
<div>
  <a
    href="/profile/camilla-long"
    role="link"
  >
    Camilla Long
  </a>
  <div>
     
  </div>
  <a
    href="/profile/mike-atherton"
    role="link"
  >
    Mike Atherton
  </a>
  <div>
     
  </div>
  <a
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`7. null with an empty ast 1`] = `null`;
